--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "mint-ui": "^2.2.13",
     "vant": "^2.1.8",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-lazyload": "^1.3.3",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
+    "postcss-px-to-viewport": "^1.1.1",
     "vue-template-compiler": "^2.6.10"
   }
 }
